Fix not sending and displaying line breaks in messages.

--- a/client/components/rooms/room/roomChat/otherUserMessage.module.scss
+++ b/client/components/rooms/room/roomChat/otherUserMessage.module.scss
@@ -4,6 +4,7 @@
   background-color: var(--bs-secondary-bg);
   border-radius: 5px;
   max-width: 75%;
+  white-space: pre-wrap;
 }
 
 @include media-breakpoint-up(sm) {
